@@ -140,6 +140,164 @@ operator|+
 literal|")"
 return|;
 block|}
+annotation|@
+name|Override
+specifier|public
+name|BulkScorer
+name|bulkScorer
+parameter_list|(
+name|LeafReaderContext
+name|context
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|float
+name|score
+init|=
+name|score
+argument_list|()
+decl_stmt|;
+specifier|final
+name|int
+name|maxDoc
+init|=
+name|context
+operator|.
+name|reader
+argument_list|()
+operator|.
+name|maxDoc
+argument_list|()
+decl_stmt|;
+return|return
+operator|new
+name|BulkScorer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|int
+name|score
+parameter_list|(
+name|LeafCollector
+name|collector
+parameter_list|,
+name|Bits
+name|acceptDocs
+parameter_list|,
+name|int
+name|min
+parameter_list|,
+name|int
+name|max
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|max
+operator|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|max
+argument_list|,
+name|maxDoc
+argument_list|)
+expr_stmt|;
+name|FakeScorer
+name|scorer
+init|=
+operator|new
+name|FakeScorer
+argument_list|()
+decl_stmt|;
+name|scorer
+operator|.
+name|score
+operator|=
+name|score
+expr_stmt|;
+name|collector
+operator|.
+name|setScorer
+argument_list|(
+name|scorer
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|doc
+init|=
+name|min
+init|;
+name|doc
+operator|<
+name|max
+condition|;
+operator|++
+name|doc
+control|)
+block|{
+name|scorer
+operator|.
+name|doc
+operator|=
+name|doc
+expr_stmt|;
+if|if
+condition|(
+name|acceptDocs
+operator|==
+literal|null
+operator|||
+name|acceptDocs
+operator|.
+name|get
+argument_list|(
+name|doc
+argument_list|)
+condition|)
+block|{
+name|collector
+operator|.
+name|collect
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|max
+operator|==
+name|maxDoc
+condition|?
+name|DocIdSetIterator
+operator|.
+name|NO_MORE_DOCS
+else|:
+name|max
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|long
+name|cost
+parameter_list|()
+block|{
+return|return
+name|maxDoc
+return|;
+block|}
+block|}
+return|;
+block|}
 block|}
 return|;
 block|}
